# kai-core

./: .gitignore  README.md  main.py  pyproject.toml
dev/: _demo_audio.py  demo_audio.py  test_omni.py  test_video.py  verify_videoprocessing.py
src/kai_core/: config.py
src/kai_core/agent/: llm_client.py
src/kai_core/core/: loop.py
src/kai_core/input/: audio_buffer.py  video_buffer.py
src/kai_core/io/: receiver.py  sender.py
src/kai_core/memory/: context.py
src/kai_core/schemata/: ipc.py  llm.py
src/kai_core/utils/: custom_types.py  logger.py  media.py
