[project]
name = "kai-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "openai>=2.35.0",
    "pydantic-settings>=2.14.1",
    "pyzmq>=27.1.0",
    "requests>=2.34.2",
    "sounddevice>=0.5.5",
]
